# hs-js-playground

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  hs-js-playground.cabal
app/: Main.hs  index.html
scripts/: build_js.sh
src/: Lib.hs
